--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -13,18 +13,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+
       - run: pip install requests
+
       - run: python scanner.py
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_USER_ID: ${{ secrets.TELEGRAM_USER_ID }}
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-      - run: |
+
+      - name: Commit playbook updates
+        run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add playbook.json
-          git diff --staged --quiet || git commit -m "Update playbook"
+          git add playbook.json playbook.backup.json
+          git diff --staged --quiet || git commit -m "Update playbook (scan #$(python -c 'import json; print(json.load(open("playbook.json")).get("scans",0))'))"
           git push
+
+      - name: Upload scanner log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: scanner-log-${{ github.run_number }}
+          path: scanner.log
+          retention-days: 7
