--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -18,9 +18,13 @@ jobs:
         with:
           python-version: '3.12'
 
-      - run: pip install requests
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || pip install requests  # fallback
 
-      - run: python scanner.py
+      - name: Run scanner
+        run: python scanner.py
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_USER_ID: ${{ secrets.TELEGRAM_USER_ID }}
@@ -28,11 +32,17 @@ jobs:
 
       - name: Commit playbook updates
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add playbook.json playbook.backup.json
-          git diff --staged --quiet || git commit -m "Update playbook (scan #$(python -c 'import json; print(json.load(open("playbook.json")).get("scans",0))'))"
-          git push
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          git add playbook.json playbook.backup.json || true
+          if ! git diff --staged --quiet; then
+            SCAN_COUNT=$(python -c 'import json; data=json.load(open("playbook.json")); print(data.get("scans", "unknown"))' 2>/dev/null || echo "unknown")
+            git commit -m "Update playbook (scan #$SCAN_COUNT)"
+            git push
+          else
+            echo "No changes detected"
+          fi
 
       - name: Upload scanner log
         if: always()
