--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt || pip install requests  # fallback
+          pip install -r requirements.txt || pip install requests
+          pip install solana solders base58
 
       - name: Run scanner
         run: python scanner.py
@@ -29,6 +30,10 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_USER_ID: ${{ secrets.TELEGRAM_USER_ID }}
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          SOLANA_PRIVATE_KEY: ${{ secrets.SOLANA_PRIVATE_KEY }}
+          SOLANA_RPC_URL: ${{ secrets.SOLANA_RPC_URL }}
+          MAX_SOL_PER_TRADE: ${{ secrets.MAX_SOL_PER_TRADE }}
+          LIVE_TRADING_ENABLED: ${{ secrets.LIVE_TRADING_ENABLED }}
 
       - name: Commit playbook updates
         run: |
